# daily-finance-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
src/daily_finance_digest/: __init__.py  __main__.py
